# hbft-sdhash

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  teste_inicial.txt
header/: bloomfilter.h  bloomfiltertree.h  config.h  filehash.h  fnv.h  hashing.h  main.h  sdhash.h
resultados/: FN_S_FP.txt  teste_fp.txt
src/: bloomfilter.c  bloomfiltertree.c  filehash.c  fingerprint.c  hashing.c  main.c  main.cpp  main.h  sdhash.cpp
